--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,15 +1,44 @@
-<h1>About HITS Lab</h1>
-<p>
-    HITS Lab stands for Health Information Technology Systems Laboratories.
+<!DOCTYPE>
+<html>
 
-    <br />
+<header class="article-header">
+<h1 style="color:#735f8e; font-size:300%;"> About HITS Lab</h1>
+</header>
+<body>
 
-    It was conceived by Paul Tavolacci, MBA who noticed that the same
-    accelerators of technology in finance were poised to take effect in
-    healthcare. By empowering consumers and payers to realize more value
-    through transparency of data, HITS Lab is creating a marketplace
-    of highly contextualized channels connecting all participants in the
-    business of health and wellness
+    <div>
+        <img src="/images/information-technology.jpg" alt="About HITS Lab" style="width:250px;height:250px;" align="right">
+    </div>
 
-</p>
+    <div class="pf-content">
+        <p>
+        HITS Lab stands for Health Information Technology Systems Laboratories.
+        </p>
+        <br/>
+        It was conceived by Paul Tavolacci, MBA who noticed that the same
+        accelerators of technology in finance were poised to take effect in
+        Healthcare. By empowering consumers and payers to realize more value
+        through transparency of data, HITS Lab is creating a marketplace
+        of highly contextualized channels connecting all participants in the
+        business of Health and Wellness
 
+        <p>&nbsp;</p>
+        <p><strong>Company Milestones:</strong></p>
+        <p>&nbsp;</p>
+
+        <table border="1" style="height: 100px;" width="800">
+            <tbody>
+            <tr>
+                <td width="100"><strong>December 2015</strong></td>
+                <td width="343">Paul Tavolacci forms HITS Lab, LLC</td>
+            </tr>
+            <tr>
+                <td width="100"><strong>March 2016</strong></td>
+                <td width="343">hitslabs.com launches</td>
+            </tr>
+
+            </tbody>
+        </table>
+    </div>
+</body>
+</html>
