--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,12 +1,29 @@
-<p>
+<!DOCTYPE>
+<html>
+
+<h1 style="color:#735f8e; font-size:300%;"> Contact Us</h1>
+
+<body>
+
+<div>
+    <img src="/images/ContactUs.jpg" alt="Contact HITS Lab" style="width:500px;height:250px;" align="right">
+</div>
+<div>
     Paul M Tavolacci
     <br />
     CEO and Founder
     <br />
+    <a href="mailto:ptavolacci@hitslabs.com">Email: ptavolacci@hitslabs.com</a>
     <br />
+    <br/>
 
     Brian Nadzan
-    <br />
+    <br/>
     CTO and Founder
-    <br />
-</p>
+    <br/>
+    <a href="mailto:bnadzan@hitslabs.com">Email: bnadzan@hitslabs.com</a>
+</div>
+
+
+</body>
+</html>
