--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4150,7 +4150,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar {
   position: relative;
-  min-height: 40px;
+  min-height: 53px;
   margin-bottom: 20px;
   border: 1px solid transparent;
 }
@@ -4256,10 +4256,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-brand {
   float: left;
-  padding: 10px 15px;
+  padding: 16.5px 15px;
   font-size: 18px;
   line-height: 20px;
-  height: 40px;
+  height: 53px;
 }
 .navbar-brand:hover,
 .navbar-brand:focus {
@@ -4279,8 +4279,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   float: right;
   margin-right: 15px;
   padding: 9px 10px;
-  margin-top: 3px;
-  margin-bottom: 3px;
+  margin-top: 9.5px;
+  margin-bottom: 9.5px;
   background-color: transparent;
   background-image: none;
   border: 1px solid transparent;
@@ -4304,7 +4304,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-nav {
-  margin: 5px -15px;
+  margin: 8.25px -15px;
 }
 .navbar-nav > li > a {
   padding-top: 10px;
@@ -4342,8 +4342,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     float: left;
   }
   .navbar-nav > li > a {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 16.5px;
+    padding-bottom: 16.5px;
   }
 }
 .navbar-form {
@@ -4354,8 +4354,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-bottom: 1px solid transparent;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
-  margin-top: 3px;
-  margin-bottom: 3px;
+  margin-top: 9.5px;
+  margin-bottom: 9.5px;
 }
 @media (min-width: 550px) {
   .navbar-form .form-group {
@@ -4440,20 +4440,20 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-bottom-left-radius: 0;
 }
 .navbar-btn {
-  margin-top: 3px;
-  margin-bottom: 3px;
+  margin-top: 9.5px;
+  margin-bottom: 9.5px;
 }
 .navbar-btn.btn-sm {
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: 11.5px;
+  margin-bottom: 11.5px;
 }
 .navbar-btn.btn-xs {
-  margin-top: 9px;
-  margin-bottom: 9px;
+  margin-top: 15.5px;
+  margin-bottom: 15.5px;
 }
 .navbar-text {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 16.5px;
+  margin-bottom: 16.5px;
 }
 @media (min-width: 550px) {
   .navbar-text {
@@ -4494,7 +4494,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #cccccc;
+  color: white;
   background-color: transparent;
 }
 .navbar-default .navbar-nav > .active > a,
@@ -4535,7 +4535,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #cccccc;
+    color: white;
     background-color: transparent;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
@@ -4555,14 +4555,14 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #735f8e;
 }
 .navbar-default .navbar-link:hover {
-  color: #cccccc;
+  color: white;
 }
 .navbar-default .btn-link {
   color: #735f8e;
 }
 .navbar-default .btn-link:hover,
 .navbar-default .btn-link:focus {
-  color: #cccccc;
+  color: white;
 }
 .navbar-default .btn-link[disabled]:hover,
 fieldset[disabled] .navbar-default .btn-link:hover,
@@ -6728,12 +6728,21 @@ button.close {
   }
 }
 body {
-  padding-top: 40px;
+  padding-top: 53px;
   background-color: white;
+  padding-left: 1cm;
+  padding-right: 1cm;
+  font-family: Tahoma, Geneva, sans-serif;
+}
+.logo {
+  display: inline-block;
+  width: 150px;
+  height: 50px;
+  float: left;
 }
 #mainNavigationBar {
   position: relative;
-  min-height: 40px;
+  min-height: 53px;
   margin-bottom: 20px;
   border: 1px solid transparent;
   background-color: #f8f8f8;
@@ -6767,7 +6776,7 @@ body {
 }
 #mainNavigationBar .navbar-nav > li > a:hover,
 #mainNavigationBar .navbar-nav > li > a:focus {
-  color: #cccccc;
+  color: white;
   background-color: transparent;
 }
 #mainNavigationBar .navbar-nav > .active > a,
@@ -6808,7 +6817,7 @@ body {
   }
   #mainNavigationBar .navbar-nav .open .dropdown-menu > li > a:hover,
   #mainNavigationBar .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #cccccc;
+    color: white;
     background-color: transparent;
   }
   #mainNavigationBar .navbar-nav .open .dropdown-menu > .active > a,
@@ -6828,14 +6837,14 @@ body {
   color: #735f8e;
 }
 #mainNavigationBar .navbar-link:hover {
-  color: #cccccc;
+  color: white;
 }
 #mainNavigationBar .btn-link {
   color: #735f8e;
 }
 #mainNavigationBar .btn-link:hover,
 #mainNavigationBar .btn-link:focus {
-  color: #cccccc;
+  color: white;
 }
 #mainNavigationBar .btn-link[disabled]:hover,
 fieldset[disabled] #mainNavigationBar .btn-link:hover,
@@ -6861,9 +6870,27 @@ fieldset[disabled] #mainNavigationBar .btn-link:focus {
   color: white;
 }
 .form-group > label {
-  margin-top: 10px;
+  margin-top: 40px;
+}
+#navbarItems li a.current {
+  font-weight: 900;
+  border-bottom: 3px solid #735f8e;
 }
 .form-group span {
   display: block;
   text-align: center;
+}
+html {
+  position: relative;
+  min-height: 100%;
+}
+.footer {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 40px;
+  background-color: #b6c096;
+  color: #735f8e;
+  left: 0px;
 }
