--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,7 +1,14 @@
-<h1>Welcome to HITS Lab</h1>
+<!DOCTYPE>
+<html>
+
+<h1 style="color:#735f8e; font-size:300%;"> Welcome to HITS Lab</h1>
+
+
 <p>
     The mission of HITS Lab is to increase the efficacy of healthcare by providing
     transparency to information by integrating and aggregating records for
     purchasers and sellers of products and services while protecting the anonymity
     of patients.
 </p>
+
+</html>
