--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,55 @@
-<p>
-   User Login page
-</p>
+<!DOCTYPE>
+<html>
+
+<h1 style="color:#735f8e; font-size:300%;"> Sign In to Your Account</h1>
+
+<body>
+
+<!--/Top Sec-->
+
+<div>
+    <img src="/images/Login.jpg" alt="Login HITS Lab" style="width:500px;height:250px;" align="right">
+</div>
+
+<!--<form action="https://members.mdlive.com/login/attempt_login" method="post">
+-->
+<form action="/user_login" method="POST">
+
+    <input type="text" size="32" name="username" placeholder="Enter Username or Email"/> <br>
+
+    <input type="password" size="32" name="password" placeholder="Password" /> <br>
+
+    <input type="submit" class="styled-button-1" value="Sign In" />
+
+    <style type="text/css">
+        .styled-button-1 {
+            -webkit-box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
+            -moz-box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
+            box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
+            color:#735f8e;
+            background-color:#b6c096;
+            border-radius:5px;
+            -moz-border-radius:5px;
+            -webkit-border-radius:5px;
+            border:none;
+            font-family:'Helvetica Neue',Arial,sans-serif;
+            font-size:16px;
+            font-weight:700;
+            height:36px;
+            padding:4px 16px;
+            text-shadow:#FE6 0 1px 0
+        }
+    </style>
+</form>
+    <div id="signUpLinks">
+        <a style="color:#735f8e;" href="https://welcome.hitslabs.com/forgot/">Forgot Username or Password?</a><br>
+        <a style="color:#735f8e;" href="https://members.hitslabs.com/signup/register?type=Customer">Not a member? Sign up for FREE.</a><br>
+    </div>
+
+    <div style="clear:both; height:40px;"></div>
+
+<!--/Footer-->
+
+
+</body>
+</html>
